fix: text size, margins, border, and spacing in the Myths section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,28 @@
+/* Custom small font size for entire website */
+/* overriding the bootstrap size to allow more text to be displayed */
+.small {
+    font-size: 0.75rem;
+    margin-bottom: 0.3rem;
+}
+
 .kodchasan-regular {
     font-family: "Kodchasan", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
+/* .kodchasan-regular.small {
+    margin-bottom: 0.3rem;
+} */
+
+
 .warm-beige {
     background-color: #F5EFE6;
-    /* background-color: green; */
-
 }
 
+.dark-charcoal {
+    background-color: #333333;
+}
 
 
 .hero-page {
@@ -26,12 +39,19 @@
 
 .glass-panel {
     color: #fff;
-    margin: 40px auto;
+    margin: 20px auto;
     background-color: rgba(255,255,255,0.1);
     border: 1px solid rgba(255,255,255,0.1);
     width: 100%;
     border-radius: 15px;
-    padding: 16px;
+    padding: 8px;
     backdrop-filter: blur(10px);
 }
 
+.info-panel {
+    color:dark-charcoal;
+    /* margin: auto; */
+    border: 2px solid #333333;
+    width: 100%;
+    /* padding: 8px; */
+}
